hello-world.html new pictures ≈

--- a/hello-world.html
+++ b/hello-world.html
@@ -36,10 +36,10 @@
 
         <h2> Company Vision</h2>
 
-            <img src="cold-conifer-evergreen-972391.jpg" alt="snow trees" width="500" height="300">
-            <img src="adventure-alone-atmosphere-848573.jpg" alt="beach adventure" width="500" height="300">
-            <img src="adventure-boardwalk-daylight-808466.jpg" alt="boardwalk" width="500" height="300">
-            <img src="chill-guy-high-tatras-91224.jpg" alt="chilling with a view" width="500" height="300">
+            <img src="beach-island-maldives-1430677.jpg">
+            <img src="beach-island-maldives-1430677.jpg">
+            <img src="beach-island-maldives-1430677.jpg">
+            <img src="beach-island-maldives-1430677.jpg">
 
         <h2> Our Product</h2>
 
