pics changes to hello world

--- a/hello-world.html
+++ b/hello-world.html
@@ -36,10 +36,10 @@
 
         <h2> Company Vision</h2>
 
-            <img src="img/beach-island-maldives-1430677.jpg">
-            <img src="img/beach-island-maldives-1430677.jpg">
-            <img src="beach-island-maldives-1430677.jpg">
-            <img src="beach-island-maldives-1430677.jpg">
+            <img src="img/beach-island-maldives-1430677.jpg" width="500">
+            <img src="img/beach-island-maldives-1430677.jpg" width="500">
+            <img src="img/beach-island-maldives-1430677.jpg" width="500">
+            <img src="img/beach-island-maldives-1430677.jpg" width="500">
 
         <h2> Our Product</h2>
 
