--- a/forms.html
+++ b/forms.html
@@ -1,50 +1,77 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Register With Us</title>
+<head>
+    <title> Veridian Dynamics </title>
+</head>
+<body>
+<h1> Welcome to Veridian Dynamics! </h1>
 
-        <form method="GET" action="http://http-inspector.glitch.me/">
+<p> At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology.</em></strong></p>
+<hr>
 
-            <label for="email">Email</label>
-            <input id="email" name="email" type="text" placeholder="account name">
-            <br>
-            <br>
+<h2> Core Values</h2>
 
-            <label for="password">Password</label>
-            <input id="password" name="password" type="password" placeholder="enter your password">
-            <br>
-            <br>
-        </form>
+<ul>
+    <li> Competence</li>
+    <li> Involvment</li>
+    <li> Technology</li>
+</ul>
 
-            <label>user bio</label>
-            <br>
-            <br>
+<h2> Our Process</h2>
 
-            <textarea name="bio"></textarea>
-            <br>
-            <br>
-            <p>How did you hear about us?</p>
+<ol>
+    <li> Plan</li>
+    <li> Evaluate</li>
+    <li> Implement</li>
+</ol>
 
-             <input type="radio" name="signs" value="a">billboard<br>
-             <input type="radio" name="dj's" value="b">radio advertisement<br>
-             <input type="radio" name="www" value="c">internet advertisement<br>
-             <input type="radio" name="blank" value="d">other<br>
-            <br>
+<h2> 2020 Vision</h2>
 
-            <p>What browser are you using?</p>
+<ul>
+    <li> Become #1 in Technology</li>
+    <li> Increase Success by 20%</li>
+    <li> Increase Business by 30%</li>
+</ul>
+<hr>
 
-            <select name="browser type">
-                <option value="firefox">firefox</option>
-                <option value="safari">safari</option>
-                <option value="chrome">chrome</option>
-            </select>
+<h2> Company Vision</h2>
 
-            <br>
-            <br>
-            <form>
-                <input type="submit">
-            </form>
+<img src="img/beach-island-maldives-1430677.jpg" width="500">
+<img src="img/beach-island-maldives-1430677.jpg" width="500">
+<img src="img/beach-island-maldives-1430677.jpg" width="500">
+<img src="img/beach-island-maldives-1430677.jpg" width="500">
 
-    </head>
+<h2> Our Product</h2>
 
+<table>
+    <tr>
+        <th> Plan</th>
+        <th> Price</th>
+        <th> Features</th>
+    </tr>
+    <tr>
+        <td>Starter</td>
+        <td>$99</td>
+        <td>Base Technology</td>
+    </tr>
+    <tr>
+        <td>Advanced</td>
+        <td>$199</td>
+        <td>Additional Features</td>
+    </tr>
+    <tr>
+        <td>Premium</td>
+        <td>$499</td>
+        <td>Unlimited Support</td>
+    </tr>
+</table>
 </html>
+<footer>
+    <p>
+        <em>All Products come with our quality gaurantee&trade;.</em>
+    </p>
+</footer>
+
+<a href="#top"><strong>Go to top of page</strong></a>
+
+</body>
