--- a/welcome.html
+++ b/welcome.html
@@ -2,9 +2,13 @@
 <html>
     <head>
         <title> Veridian Dynamics </title>
+
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <h1> Welcome to Veridian Dynamics! </h1>
+
+        <h1 class="fancy-header"> Welcome to Veridian Dynamics! </h1>
+
 
         <p> At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology.</em></strong></p>
         <hr>
@@ -13,7 +17,7 @@
 
         <ul>
             <li> Competence</li>
-            <li> Involvment</li>
+            <li> Involvement</li>
             <li> Technology</li>
         </ul>
 
