--- a/css-into.html
+++ b/css-into.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>CSS Into</title>
-    <link rel="stylesheet" href="css/site.css">
+    </style>
+    h1 {
+    color: blue;
+    text-decoration: underline;
+    }
+    </style>
 </head>
 <body>
         <h1>Welcome Xanadu!</h1>
