new phots and styling

--- a/welcome.html
+++ b/welcome.html
@@ -5,10 +5,12 @@
 
         <link rel="stylesheet" href="css/style.css">
     </head>
+
+    <br>
+
     <body>
 
         <h1 class="fancy-header"> Welcome to Veridian Dynamics! </h1>
-
 
         <p> At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology.</em></strong></p>
         <hr>
@@ -40,11 +42,11 @@
 
         <h2> Company Vision</h2>
 
-            <img src="img/beach-island-maldives-1430677.jpg" width="500">
-            <img src="img/beach-island-maldives-1430677.jpg" width="500">
-            <img src="img/beach-island-maldives-1430677.jpg" width="500">
-            <img src="img/beach-island-maldives-1430677.jpg" width="500">
-
+            <img src="img/cabo.jpg" width="500">
+            <img src="img/italy.jpg" width="500">
+            <img src="img/vacation.jpg" width="500"/>
+            <img src="img/panda beach.jpg" width="500"/>
+        <br>
         <h2> Our Product</h2>
 
             <table>
