--- a/welcome.html
+++ b/welcome.html
@@ -42,10 +42,10 @@
 
         <h2> Company Vision</h2>
 
-            <img src="img/cabo.jpg" width="500">
-            <img src="img/italy.jpg" width="500">
-            <img src="img/vacation.jpg" width="500"/>
-            <img src="img/panda beach.jpg" width="500"/>
+            <img src="img/cabo.jpg" width="500" height="300">
+            <img src="img/italy.jpg" width="500" height="300">
+            <img src="img/vacation.jpg" width="500" height="300">
+            <img src="img/panda beach.jpg" width="500" height="300">
         <br>
         <h2> Our Product</h2>
 
