media queries and flag

--- a/texas-flag.html
+++ b/texas-flag.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class="flag">
+    <link rel="stylesheet" href="css/texas-flag.css">
+
+    <div class="blue">
+        <div class="starContainer">
+            <div class="star"></div>
+        </div>
+    </div>
+    <div class="stripes">
+
+        <div class="white"></div>
+        <div class="red"></div>
+    </div>
+
+    <div class="texture">
+    </div>
+
+</div>
