new grids and queries changes

--- a/media-queries.html
+++ b/media-queries.html
@@ -19,7 +19,7 @@
     </ul>
 </nav>
 <div class="header-img">
-    <img src=http://placeholder.pics/svg/1200 alt="placeholder" class="responsive">
+    <img src=http://placeholder.pics/svg/1200 alt="">
 </div>
 <section id="main" class="main">
     <h2>Main Section</h2>
