file name change

--- a/grid-layout.html
+++ b/grid-layout.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Grid Layout</title>
     <link rel="stylesheet" href="css/grid-layout.css">
+    <link rel="stylesheet" href="css/media-queries.css">
 </head>
     <body>
 <!-- HTML -->
@@ -26,6 +27,14 @@
         <div class="column one-fourth">1/4</div>
         <div class="column one-fourth">1/4</div>
     </div><!-- /.row -->
+        <div class="row">
+            <div class="column one-sixth">1/6</div>
+            <div class="column one-sixth">1/6</div>
+            <div class="column one-sixth">1/6</div>
+            <div class="column one-sixth">1/6</div>
+            <div class="column one-sixth">1/6</div>
+            <div class="column one-sixth">1/6</div>
+        </div>
   <!-- /.row -->
     <div class="row">
         <div class="column one-eighth">1/8</div>
