--- a/media-queries.html
+++ b/media-queries.html
@@ -2,24 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!-- added viewport metatag -->
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
     <title>Media Queries</title>
-    <link rel="stylesheet" href="css/media-queries.css">
+    <link rel="stylesheet" type="text/css" href="css/media.css">
 </head>
 <body>
-<div class="alert-info hidden-on-desktop">
+<div class="alert-info hidden-on-mobile">
     <a href="#main">Skip to main content</a>
 </div>
 <h1>Company</h1>
 <nav>
     <ul class="nav-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#work">Work</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Work</a></li>
+        <li><a href="#">Contact</a></li>
     </ul>
 </nav>
 <div class="header-img">
-    <img src=http://placeholder.pics/svg/1200 alt="">
+    <img src="http://placeholder.pics/svg/890x385" alt="">
 </div>
 <section id="main" class="main">
     <h2>Main Section</h2>
@@ -32,7 +34,8 @@
 <footer>
     <p>(c) 2017 All rights reserved</p>
     <div id="social-media-links">
+
     </div>
 </footer>
 </body>
-</html>
+</html>>
