--- a/media-queries.html
+++ b/media-queries.html
@@ -5,7 +5,7 @@
     <!-- added viewport metatag -->
     <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
     <title>Media Queries</title>
-    <link rel="stylesheet" type="text/css" href="css/media.css">
+    <link rel="stylesheet" href="css/media-queries.css"
 </head>
 <body>
 <div class="alert-info hidden-on-mobile">
@@ -34,7 +34,6 @@
 <footer>
     <p>(c) 2017 All rights reserved</p>
     <div id="social-media-links">
-
     </div>
 </footer>
 </body>
