--- a/order-pizza.html
+++ b/order-pizza.html
@@ -29,8 +29,14 @@
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search stores near you!</button>
                 </form>
             </ul>
+
             <form class="form-inline my-2 my-lg-0">
-                <button type="button" class="btn btn-secondary btn-sm">Sign up</button>
+                <svg xmlns="http://www.w3.org/2000/svg" width="8" height="8" viewBox="0 0 8 8">
+                    <path d="M4 0c-1.1 0-2 1.12-2 2.5s.9 2.5 2 2.5 2-1.12 2-2.5-.9-2.5-2-2.5zm-2.09 5c-1.06.05-1.91.92-1.91 2v1h8v-1c0-1.08-.84-1.95-1.91-2-.54.61-1.28 1-2.09 1-.81 0-1.55-.39-2.09-1z" />
+                </svg>
+                <div class="Sign-up">
+                    <a class="nav-link" href="#">Sign up</a>
+                </div>
             </form>
         </div>
     </nav>
@@ -46,37 +52,121 @@
 
         <ul class="nav nav-tabs">
             <li class="nav-item">
-                <a class="nav-link active" href="#">Size and crust</a>
-                <button type="button" class="btn btn-primary">
-                    <span class="badge badge-light">1</span>
-                    <span class="sr-only">unread messages</span>
-                </button>
-
+                <a class="nav-link active" href="#"><span class="badge badge-pill badge-dark">1</span> Size and crust </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Cheese and sauce</a>
-                <button type="button" class="btn btn-primary">
-                    <span class="badge badge-light">2</span>
-                    <span class="sr-only">unread messages</span>
-                </button>
+                <a class="nav-link" href="#"><span class="badge badge-pill badge-dark">2</span> Cheese and sauce </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Toppings</a>
-                <button type="button" class="btn btn-primary">
-                    <span class="badge badge-light">3</span>
-                    <span class="sr-only">unread messages</span>
-                </button>
+                <a class="nav-link" href="#"><span class="badge badge-pill badge-dark">3</span> Toppings </a>
             </li>
         </ul>
+        <div class="card">
+            <div class="card-header text-white bg-primary mb-3">Choose size and crust</div>
+            <div class="card-body">
+                <div class="card" style="width: auto;">
+                    <div class="card-header">
+                        Hand Tossed
+                    </div>
+                        <li class="list-group-item">Garlic seasoned crust with a rich, buttery tatse.</li>
+                        <li class="list-group-item"><input type="radio">  Small(10")</li>
+                        <li class="list-group-item"><input type="radio">  Medium(12")</li>
+                    </ul>
+                </div>
+                <br>
+                <div class="card" style="width: auto;">
+                    <div class="card-header">
+                        Crispy Thin
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Thin enough for optimum crispy to crunchy ratio.</li>
+                        <li class="list-group-item"><input type="radio">Medium(12")</li>
+                        <li class="list-group-item"><input type="radio">Large(14")</li>
+                    </ul>
+                </div>
+                <br>
+                <div>
+                    <a href="#" class="btn btn-primary">Next step ></a>
+                </div>
+            </div>
+        </div>
+            <br>
 
+            <div class="card">
+                <div class="card-header text-white bg-primary mb-3">Choose cheese and sauce</div>
+                <div class="card-body">
+                    <div class="card" style="width: auto;">
+                        <div class="card-header">
+                            Cheese
+                        </div>
+                        <li class="list-group-item">How much?</li>
+                        <select class="form-control" id="exampleFormControlSelect">
+                            <option>Light</option>
+                            <option>Normal</option>
+                            <option>Extra</option>
+                            <option>Double</option>
+                        </select>
+                    </div>
+                    <br>
+                    <div class="card" style="width: auto;">
+                        <div class="card-header">
+                            Sauce
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">What type?</li>
+                            <select class="form-control" id="exampleFormControlSelect1">
+                                <option>Tomato Sauce</option>
+                                <option>Marinara Sauce</option>
+                                <option>BBQ Sauce</option>
+                                <option>Alfredo Sauce</option>
+                            </select>
+                        </ul>
+                        <li class="list-group-item">How much?</li>
+                        <select class="form-control" id="exampleFormControlSelect2">
+                            <option>Light</option>
+                            <option>Normal</option>
+                            <option>Extra</option>
+                            <!--<option>Double</option>-->
+                        </select>
+                    </div>
+                    <br>
+                    <div>
+                        <button type="button" class="btn btn-primary">>Next step ></button>
+                        <button type="button" class="btn btn-primary">< Previous step</button>
+                    </div>
+                    </div>
+                </div>
 
-
-
-
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+                <div class="card">
+                    <div class="card-header text-white bg-primary mb-3">Choose Toppings</div>
+                    <div class="card-body">
+                        <div class="card" style="width: auto;">
+                            <div class="card-header">
+                                Choose Meats
+                            </div>
+                            <li class="list-group-item"><input type="checkbox">  Beef</li>
+                            <li class="list-group-item"><input type="checkbox">  Ham</li>
+                            <li class="list-group-item"><input type="checkbox">  Philly Steak</li>
+                            <li class="list-group-item"><input type="checkbox">  Bacon</li>
+                            </ul>
+                        </div>
+                        <br>
+                        <div class="card" style="width: auto;">
+                            <div class="card-header">
+                                Choose Non-Meats
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item"><input type="checkbox">  Green Peppers</li>
+                                <li class="list-group-item"><input type="checkbox">  Mushrooms</li>
+                                <li class="list-group-item"><input type="checkbox">  Onions</li>
+                                <li class="list-group-item"><input type="checkbox">  Jalapeño Peppers</li>
+                            </ul>
+                        </div>
+                        <br>
+                        <div>
+                            <a href="#" class="btn btn-primary">Checkout</a>
+                        </div>
+                    </div>
 
 </main>
 </body>
