--- a/order-pizza.html
+++ b/order-pizza.html
@@ -42,8 +42,8 @@
     </nav>
     <br>
 
-    <main class="container">
-    <div class="jumbotron">
+    <main class="container-fluid">
+    <div class="jumbotron jumbotron-fluid">
         <h1 class="text-center">Welcome to Pizza World!</h1>
     </div>
         <div>
