--- a/order-pizza.html
+++ b/order-pizza.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/custom.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 <body>
 
@@ -17,6 +18,7 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <!--mr = margin right-->
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Order online<span class="sr-only">(current)</span></a>
@@ -26,24 +28,20 @@
                 </li>
                 <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="Zip code" placeholder="Zip code" aria-label="Zip code">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search stores near you!</button>
+                    <button class="btn btn-outline-secondary" type="submit">Search stores near you!</button>
                 </form>
             </ul>
 
             <form class="form-inline my-2 my-lg-0">
-                <svg xmlns="http://www.w3.org/2000/svg" width="8" height="8" viewBox="0 0 8 8">
-                    <path d="M4 0c-1.1 0-2 1.12-2 2.5s.9 2.5 2 2.5 2-1.12 2-2.5-.9-2.5-2-2.5zm-2.09 5c-1.06.05-1.91.92-1.91 2v1h8v-1c0-1.08-.84-1.95-1.91-2-.54.61-1.28 1-2.09 1-.81 0-1.55-.39-2.09-1z" />
-                </svg>
-                <div class="Sign-up">
-                    <a class="nav-link" href="#">Sign up</a>
+                <div class="Sign-up ml auto">
+                    <a class="nav-link" href="#"><i class="fas fa-user"></i> Sign up</a>
                 </div>
             </form>
         </div>
     </nav>
     <br>
-
     <main class="container-fluid">
-    <div class="jumbotron jumbotron-fluid">
+    <div class="jumbotron jumbotron-fluid px-0">
         <h1 class="text-center">Welcome to Pizza World!</h1>
     </div>
         <div>
@@ -164,13 +162,15 @@
                         </div>
                         <br>
                         <div>
-                            <a href="#" class="btn btn-primary">Checkout</a>
+                            <button class="float-right btn btn-primary">Checkout <i class="fas fa-shopping-cart"></i></button>
                         </div>
                     </div>
 
                     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
                     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
                     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-</main>
+    </main>
 </body>
 </html>
+
+<!--use webhook.com to make functional-->
