Level Up Work, personal project

--- a/Defuse the BOM.html
+++ b/Defuse the BOM.html
@@ -13,21 +13,25 @@
     (function() {
         "use strict";
         var detonationTimer = 5;
+        // created the following variable called interval // // personal note //
         var interval = 1000;
         // TODO: This function needs to be called once every second
         function updateTimer() {
             if (detonationTimer === 0) {
-                alert('EXTERMINATE!');
+                alert('BOOM!');
                 document.body.innerHTML = '';
             } else if (detonationTimer > 0) {
                 document.getElementById('timer').innerHTML = detonationTimer;
             }
             detonationTimer--;
         }
+        //  created explode variable, this is calling the 'update timer' function // // personal note//
+
         var explode = setInterval(updateTimer, interval);
         // TODO: When this function runs, it needs to
         // cancel the interval/timeout for updateTimer()
         function defuseTheBOM() {
+            // calling the explode variable which calls the update timer function. //  //personal note//
             clearInterval(explode);
         }
         // Don't modify anything below this line!
