--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -7,6 +7,12 @@
 <body>
 
 <h1 id="main-header">Hello World!</h1>
+
+<button id="headerBtn">Header Button</button>
+<button id="subheadBtn">Sub Header Button</button>
+<button id="changeBtn">List Color Button</button>
+<button id="subParBtn">Paragraph Button</button>
+
 <ul>
     <li data-dbid="1">Item 1</li>
     <li data-dbid="2">Item 2</li>
@@ -29,40 +35,76 @@
     (function() {
         "use strict";
 
+        // change" " = getElementById("----Btn");
+        // function change" " () {   }
+        // change " ".addEventListerner("click", -- fucntion name--)
+
         // TODO: Uncomment next line and get the main header element by id
-        var mainHeader = document.getElementById("main-header");
-
-
-        // TODO: Set inner html of mainHeader to "JavaScript is Cool"
+        var headerBtn = document.getElementById("headerBtn");
+            // console.log(testBtn);
+            var mainHeader = document.getElementById("main-header");
+        headerBtn.addEventListener('click', function() {
         mainHeader.innerHTML = "Javascript is Cool";
+        });
+        // TODO: Set inner html of mainHeader to "JavaScript is Cool"
 
 
         // TODO: Uncomment the next line and get the sub header element by id
-        var subHeader = document.getElementById("sub-header");
+        var subheadBtn = document.getElementById("subheadBtn");
+        subheadBtn.addEventListener('dblclick', function() {
+            var subHeader = document.getElementById("sub-header");
+        subHeader.style.color = "blue";
+        });
 
         // TODO: Set the text color of subHeader to blue
-        subHeader.style.color = "blue";
 
         // TODO: Uncomment the next line and get all list items
-        var listItems = document.getElementsByTagName("li");
-        // console.log(listItems);
-
         // TODO: Set text color on every other list item to grey
         // TODO: Set text color of li with dbid = 1 to blue
-        for (var i = 0; i < listItems.length; i += 2) {
-            listItems[i].style.color = "gray";
-        }
+        var listItems = document.getElementsByTagName("li");
+        function toggle() {
+            for (var i = 0; i < listItems.length; i += 2) {
+                listItems[i].style.color = "gray";
        listItems[0].style.color ="blue";
-
-
-
+            }
+        }
+        changeBtn.addEventListener("click", toggle);
 
         // TODO: Uncomment the next line and get all elements with class name sub-paragraph
-        var subParagraphs = document.getElementsByClassName("sub-paragraph");
+        var subParBtn = document.getElementById('subParBtn');
+        subParBtn.addEventListener("dblclick", function() {
+            // var subParBtn = document.getElementById("subParBtn");
+            // // console.log(testBtn);
+            // subParBtn.addEventListener('click', function() {
+            var subParagraphs = document.getElementsByClassName("sub-paragraph");
+            subParagraphs[0].innerHTML = "Mission Accomplished!";
+        });
 
         // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
-        subParagraphs[0].innerHTML = "Mission Accomplished!";
+
     })();
 </script>
 </body>
 </html>
+
+
+<!--================================= DOM EVENT BONUSES-->
+<!--BONUS 1 - create a stop watch app-->
+<!--1) stop watch display that shows the time to the nearest 100th of a second-->
+<!--2) start button to start the stop watch-->
+<!--3) reset button to reset the time to zero-->
+<!--4) pause button to stop the stop watch-->
+<!--Additional Features:-->
+<!--1) store a list of times in an aside div that are appended to every time the reset button is hit-->
+<!--2) add delete buttons for each stored time that removes the time from the aside div-->
+<!--3) add keyboard events to control starting, pausing, and resetting-->
+
+
+<!--BONUS 2 - create a Hangman game-->
+<!--Allow user 1 to enter a random word for user 2 to try to guess.-->
+<!-- - display the number of guesses-->
+<!-- - display the letters already attempted-->
+<!-- - display the word as it is being completed and the letters not already guessed with underscores-->
+<!-- - a form should allow the user to type a letter guess-->
+<!-- - do not accept inputs that are more than one letter or are not letters (ignore case)-->
+<!--BONUS 3 - Create a zoomable font size effect with mouse scroll-->
