--- a/loops.html
+++ b/loops.html
@@ -5,9 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-    <!--<script src="js/while.js"></script>-->
+    <script src="js/while.js"></script>
     <!--<script src="js/for-loops.js"></script>-->
-    <script src="js/break-and-continue.js"></script>
+    <!--<script src="js/break-and-continue.js"></script>-->
 
 </body>
 </html>
