--- a/jquery-exercises.html
+++ b/jquery-exercises.html
@@ -32,14 +32,23 @@
 <script src="JS/jquery-2.2.4.min.js"></script>
 <script>
     "use strict";
-    $('li').css('font-size', '20px');
-    $('h1, p, li').css('background-color', 'yellow');
-    // $('p').css('background-color', 'yellow');
-    // $('li').css('background-color', 'yellow');
+    $('h1').click(function() {
+            $(this).css('background-color', 'blue');
+        });
 
-    var contents = $('#codeup').html();
-    alert(contents);
+    $('p').dblclick(function(){
+        $(this).css('font-size', '18px')
+    });
 
+
+    $('li').hover(
+        function() {
+            $(this).css('color', 'red');
+        },
+        function() {
+            $(this).css('color', 'black');
+        }
+    );
 
 </script>
 
