--- a/ajax-store.html
+++ b/ajax-store.html
@@ -2,10 +2,11 @@
 <html>
 <head>
     <title>Online Store</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
 </head>
 <body>
 
-<h1>My Tool Store</h1>
+<h1> RICK'S HARDWARE </h1>
 
 <table id="products">
     <thead>
@@ -29,9 +30,9 @@
     $.ajax('data/inventory.json').done(function(data) {
         $('#btn').click(function(){
 
-            $('#insertProducts').append().html(buildHtml(data));
+            $('#insertProducts').html(buildHtml(data));
              // console.log(data);
-        })
+        });
     });
 
     // TODO: Take the data from inventory.json and append it to the products table
@@ -53,9 +54,15 @@
         });
         return totalHtml
     }
-
+        $('#products').css('background', 'orange');
+        $('h1').css('color', 'yellow');
+        $('body').css('background-color', 'purple');
 })();
 </script>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </body>
 </html>
