weather maps updated, google maps not functioning yet

--- a/jquery-exercises.html
+++ b/jquery-exercises.html
@@ -1,55 +1,560 @@
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+    <!--<meta charset="UTF-8">-->
+    <!--<title>Title</title>-->
+<!--</head>-->
+<!--<body>-->
+    <!--<h1 id="codeup">Hello Codeup</h1>-->
+
+    <!--&lt;!&ndash;alert(contents);&ndash;&gt;-->
+
+    <!--<div class="notice">-->
+        <!--<h3>NOTICE</h3>-->
+        <!--<p>This is an important message!</p>-->
+    <!--</div>-->
+    <!--<div id="lists">-->
+        <!--<h2>Lorem Ipsum</h2>-->
+        <!--<p>-->
+            <!--Lorem ipsum dolor sit amet, incididunt ut <span class="important">labore et dolore magna aliqua.</span>, quis ut aliquip ex ea commodo.-->
+        <!--</p>-->
+        <!--<ul>-->
+            <!--<li>lorem</li>-->
+            <!--<li>ipsum</li>-->
+            <!--<li>dolor</li>-->
+            <!--<li>sit</li>-->
+        <!--</ul>-->
+    <!--</div>-->
+    <!--<p class="important">This is also very important.</p>-->
+
+
+
+<!--<script src="JS/jquery-2.2.4.min.js"></script>-->
+<!--<script>-->
+    <!--"use strict";-->
+    <!--$('h1').click(function() {-->
+            <!--$(this).css('background-color', 'blue');-->
+        <!--});-->
+
+    <!--$('p').dblclick(function(){-->
+        <!--$(this).css('font-size', '18px')-->
+    <!--});-->
+
+
+    <!--$('li').hover(function() {-->
+            <!--$(this).css('color', 'red');-->
+        <!--},-->
+        <!--function() {-->
+            <!--$(this).css('color', 'black');-->
+        <!--});-->
+
+<!--</script>-->
+
+
+<!--</body>-->
+<!--</html>-->
+
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+    <!--<meta charset="UTF-8">-->
+    <!--<title>Title</title>-->
+<!--</head>-->
+<!--<body>-->
+
+<!--<section>-->
+    <!--<h1>This is a Title</h1>-->
+<!--</section>-->
+
+<!--<section>-->
+    <!--<ol>-->
+        <!--<li>asdf</li>-->
+        <!--<li>asdf</li>-->
+        <!--<li>asdf</li>-->
+    <!--</ol>-->
+
+    <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet consequuntur cumque debitis, dicta eaque eveniet exercitationem laudantium magnam minima nostrum officia repudiandae tempore, unde. A eum impedit minus non officia?</p>-->
+
+<!--</section>-->
+
+<!--<section>-->
+
+    <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus provident quaerat voluptatem. Consectetur consequatur consequuntur deserunt dignissimos esse eum facilis, iste magnam molestiae, mollitia officia omnis quasi quisquam reprehenderit rerum, unde vitae. Autem deserunt doloribus harum, maxime minima numquam, optio pariatur placeat ratione reprehenderit sapiente sequi similique, suscipit tempora voluptate.</p>-->
+
+<!--</section>-->
+<!--<section>-->
+
+    <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, necessitatibus!</p>-->
+
+<!--</section>-->
+
+<!--<ul>-->
+    <!--<li>Dog</li>-->
+    <!--<li>Cat</li>-->
+    <!--<li>Fish</li>-->
+<!--</ul>-->
+<!--<ul>-->
+    <!--<li>Red</li>-->
+    <!--<li>Green</li>-->
+    <!--<li>Blue</li>-->
+<!--</ul>-->
+<!--<ul>-->
+    <!--<li>Sam</li>-->
+    <!--<li>Fred</li>-->
+    <!--<li>Smith</li>-->
+<!--</ul>-->
+
+<!--<script-->
+        <!--src="https://code.jquery.com/jquery-2.2.4.min.js"-->
+        <!--integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="-->
+        <!--crossorigin="anonymous"></script>-->
+
+<!--<script>-->
+    <!--$ (function() {-->
+        <!--"use strict";-->
+
+        <!--$('h1').css('background', 'yellow');-->
+
+        <!--$('h1').html('hello codeup');-->
+
+        <!--// $('p').html('hello world');-->
+
+        <!--$('ol').children().last().css('background', 'red');-->
+
+        <!--$('p').click(function() {-->
+            <!--$(this).parent().hide();-->
+        <!--})-->
+
+        <!--$('ul').hover(function(){-->
+            <!--$(this).css('background', 'green');-->
+        <!--},function(){-->
+            <!--$(this).css('background', 'white');-->
+        <!--})-->
+
+        <!--$('p').eq(1).html('hello codeup');-->
+    <!--});-->
+
+<!--</script>-->
+
+<!--</body>-->
+<!--</html>-->
+
+
+
+
+
+
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+    <!--<meta charset="UTF-8">-->
+    <!--<title>Title</title>-->
+<!--</head>-->
+<!--<body>-->
+
+<!--<section>-->
+    <!--<h1>This is a Title</h1>-->
+<!--</section>-->
+
+<!--<section>-->
+    <!--<ol>-->
+        <!--<li>asdf</li>-->
+        <!--<li>asdf</li>-->
+        <!--<li>asdf</li>-->
+    <!--</ol>-->
+
+    <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet consequuntur cumque debitis, dicta eaque eveniet exercitationem laudantium magnam minima nostrum officia repudiandae tempore, unde. A eum impedit minus non officia?</p>-->
+
+<!--</section>-->
+
+<!--<section>-->
+
+    <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus provident quaerat voluptatem. Consectetur consequatur consequuntur deserunt dignissimos esse eum facilis, iste magnam molestiae, mollitia officia omnis quasi quisquam reprehenderit rerum, unde vitae. Autem deserunt doloribus harum, maxime minima numquam, optio pariatur placeat ratione reprehenderit sapiente sequi similique, suscipit tempora voluptate.</p>-->
+
+<!--</section>-->
+
+<!--<section>-->
+
+    <!--<p>Benny's, consectetur adipisicing elit. Doloribus provident quaerat voluptatem. Consectetur consequatur consequuntur deserunt dignissimos esse eum facilis, iste magnam molestiae, mollitia officia omnis quasi quisquam reprehenderit rerum, unde vitae. Autem deserunt doloribus harum, maxime minima numquam, optio pariatur placeat ratione reprehenderit sapiente sequi similique, suscipit tempora voluptate.</p>-->
+    <!--<ul>-->
+        <!--<li>Dog</li>-->
+        <!--<li>Cat</li>-->
+        <!--<li>Fish</li>-->
+    <!--</ul>-->
+<!--</section>-->
+
+<!--<section>-->
+
+    <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus provident quaerat voluptatem. Consectetur consequatur consequuntur deserunt dignissimos esse eum facilis, iste magnam molestiae, mollitia officia omnis quasi quisquam reprehenderit rerum, unde vitae. Autem deserunt doloribus harum, maxime minima numquam, optio pariatur placeat ratione reprehenderit sapiente sequi similique, suscipit tempora voluptate.</p>-->
+
+<!--</section>-->
+
+<!--<section>-->
+
+    <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus provident quaerat voluptatem. Consectetur consequatur consequuntur deserunt dignissimos esse eum facilis, iste magnam molestiae, mollitia officia omnis quasi quisquam reprehenderit rerum, unde vitae. Autem deserunt doloribus harum, maxime minima numquam, optio pariatur placeat ratione reprehenderit sapiente sequi similique, suscipit tempora voluptate.</p>-->
+
+<!--</section>-->
+
+<!--<section>-->
+
+    <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, necessitatibus!</p>-->
+
+<!--</section>-->
+
+<!--<ul>-->
+    <!--<li>Dog</li>-->
+    <!--<li>Cat</li>-->
+    <!--<li>Fish</li>-->
+<!--</ul>-->
+
+<!--<ul>-->
+    <!--<li>Red</li>-->
+    <!--<li>Green</li>-->
+    <!--<li>Blue</li>-->
+<!--</ul>-->
+
+<!--<ul>-->
+    <!--<li>Sam</li>-->
+    <!--<li>Fred</li>-->
+    <!--<li>Smith</li>-->
+<!--</ul>-->
+
+<!--<ul>-->
+    <!--<li>Dog</li>-->
+    <!--<li>Cat</li>-->
+    <!--<li>Fish</li>-->
+<!--</ul>-->
+
+<!--<ul>-->
+    <!--<li>Red</li>-->
+    <!--<li>Green</li>-->
+    <!--<li>Blue</li>-->
+<!--</ul>-->
+
+<!--<ul>-->
+    <!--<li>Sam</li>-->
+    <!--<li>Fred</li>-->
+    <!--<li>Smith</li>-->
+<!--</ul>-->
+
+<!--<script-->
+        <!--src="https://code.jquery.com/jquery-2.2.4.min.js"-->
+        <!--integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="-->
+        <!--crossorigin="anonymous"></script>-->
+<!--</body>-->
+<!--</html>-->
+
+<!--<p>-->
+    <!--I'm your cool new webpage. Made with <a href="https://glitch.com">Glitch</a>!-->
+<!--</p>-->
+
+<!--&lt;!&ndash; include the Glitch button to show what the webpage is about and-->
+      <!--to make it easier for folks to view source and remix &ndash;&gt;-->
+<!--<div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>-->
+<!--<script src="https://button.glitch.me/button.js"></script>-->
+<!--<script>-->
+    <!--$ (function() {-->
+        <!--"use strict";-->
+        <!--&lt;!&ndash; 1. Refactor the h1 to have a background color of yellow. &ndash;&gt;-->
+        <!--$("h1").css("background","yellow");-->
+
+        <!--&lt;!&ndash; 2. refactor the 4th paragraph to "hello study group" &ndash;&gt;-->
+        <!--$('p').eq(3).html('hello study group');-->
+        <!--// $('section>p').next().next().next().html('hello study group'); -&#45;&#45;&ndash;&gt; ??????????-->
+
+        <!--&lt;!&ndash; 3. refactor the 5th "ul" of the 'li' list, highlight the 2nd item in that list to green. &ndash;&gt;-->
+        <!--$('ul').eq(4).children().first().next().css('background', 'green');-->
+
+        <!--&lt;!&ndash; 4. hide the title of the page &ndash;&gt;-->
+        <!--$('h1').hide();-->
+
+        <!--&lt;!&ndash; 5.	Highlight the 4th paragraph &ndash;&gt;-->
+        <!--$('p').eq(-6).css('background', 'yellow')-->
+
+        <!--&lt;!&ndash; 6.	Change text color of second item on each list to red &ndash;&gt;-->
+        <!--//========= Option 1-->
+        <!--// $('ul').each(function() {-->
+        <!--//   $(this).children().eq(1).css('color', 'red');-->
+        <!--// })-->
+
+        <!--//========= Option 2-->
+        <!--$('ul').each(function() {-->
+            <!--$(this).children().first().next()-->
+                <!--.css('color', 'red');-->
+        <!--})-->
+
+        <!--// &lt;!&ndash; 7.	Make each item on the list turn to bold when that item is clicked. &ndash;&gt;-->
+        <!--$('li').click(function() {-->
+            <!--$(this).css('font-weight', 'bold');-->
+        <!--});-->
+
+        <!--// &lt;!&ndash; When you hover the second paragraph the third paragraph should turn green&ndash;&gt;-->
+        <!--$('p').eq(1).hover(-->
+            <!--function() {-->
+                <!--$('p').eq(2).css('color', 'green');-->
+            <!--},function(){-->
+                <!--$('p').eq(2).css('color', 'black');-->
+            <!--});-->
+
+
+        <!--// &lt;!&ndash; When you click on the second li in the third ul the first item in the ol should change to 'codeUp'&ndash;&gt;-->
+
+        <!--$('ul').eq(2).children().first().next()-->
+
+        <!--// &lt;!&ndash; Change the title to 'Carolina Panthers are the best' in green&ndash;&gt;-->
+        <!--$('h1').show().html('Carolina Panthers are the best')-->
+
+        <!--// &lt;!&ndash;When you click on the panthers, all paragraphs hide&ndash;&gt;-->
+        <!--$('h1').click(function(){ // also can use hover, etc.-->
+            <!--$('p').toggle();-->
+        <!--})-->
+
+        <!--// Without using eq(), change the third paragraph font size and font color to blue.-->
+        <!--$('section').first().next().next().next().children().first().css({color: "blue", "font-size": "20px"})-->
+    <!--});-->
+
+<!--</script>-->
+<!--</body>-->
+<!--</html>-->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        h1 {
+            border: 5px solid red;
+        }
+    </style>
 </head>
 <body>
-    <h1 id="codeup">Hello Codeup</h1>
 
-    <!--alert(contents);-->
+<section>
+    <h1>This is a Title</h1>
+</section>
 
-    <div class="notice">
-        <h3>NOTICE</h3>
-        <p>This is an important message!</p>
-    </div>
-    <div id="lists">
-        <h2>Lorem Ipsum</h2>
-        <p>
-            Lorem ipsum dolor sit amet, incididunt ut <span class="important">labore et dolore magna aliqua.</span>, quis ut aliquip ex ea commodo.
-        </p>
-        <ul>
-            <li>lorem</li>
-            <li>ipsum</li>
-            <li>dolor</li>
-            <li>sit</li>
-        </ul>
-    </div>
-    <p class="important">This is also very important.</p>
+<section>
+    <ol>
+        <li>asdf</li>
+        <li>asdf</li>
+        <li>asdf</li>
+    </ol>
 
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet consequuntur cumque debitis, dicta eaque eveniet exercitationem laudantium magnam minima nostrum officia repudiandae tempore, unde. A eum impedit minus non officia?</p>
 
+</section>
 
-<script src="JS/jquery-2.2.4.min.js"></script>
-<script>
-    "use strict";
-    $('h1').click(function() {
-            $(this).css('background-color', 'blue');
-        });
+<section>
 
-    $('p').dblclick(function(){
-        $(this).css('font-size', '18px')
-    });
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus provident quaerat voluptatem. Consectetur consequatur consequuntur deserunt dignissimos esse eum facilis, iste magnam molestiae, mollitia officia omnis quasi quisquam reprehenderit rerum, unde vitae. Autem deserunt doloribus harum, maxime minima numquam, optio pariatur placeat ratione reprehenderit sapiente sequi similique, suscipit tempora voluptate.</p>
 
+</section>
 
-    $('li').hover(function() {
-            $(this).css('color', 'red');
-        },
-        function() {
-            $(this).css('color', 'black');
-        });
+<section>
 
-</script>
+    <p>Benny's, consectetur adipisicing elit. Doloribus provident quaerat voluptatem. Consectetur consequatur consequuntur deserunt dignissimos esse eum facilis, iste magnam molestiae, mollitia officia omnis quasi quisquam reprehenderit rerum, unde vitae. Autem deserunt doloribus harum, maxime minima numquam, optio pariatur placeat ratione reprehenderit sapiente sequi similique, suscipit tempora voluptate.</p>
+    <ul>
+        <li>Dog</li>
+        <li>Cat</li>
+        <li>Fish</li>
+    </ul>
+</section>
 
+<section>
 
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus provident quaerat voluptatem. Consectetur consequatur consequuntur deserunt dignissimos esse eum facilis, iste magnam molestiae, mollitia officia omnis quasi quisquam reprehenderit rerum, unde vitae. Autem deserunt doloribus harum, maxime minima numquam, optio pariatur placeat ratione reprehenderit sapiente sequi similique, suscipit tempora voluptate.</p>
+
+</section>
+
+<section>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus provident quaerat voluptatem. Consectetur consequatur consequuntur deserunt dignissimos esse eum facilis, iste magnam molestiae, mollitia officia omnis quasi quisquam reprehenderit rerum, unde vitae. Autem deserunt doloribus harum, maxime minima numquam, optio pariatur placeat ratione reprehenderit sapiente sequi similique, suscipit tempora voluptate.</p>
+
+</section>
+
+<section>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, necessitatibus!</p>
+
+</section>
+
+<ul>
+    <li>Dog</li>
+    <li>Cat</li>
+    <li>Fish</li>
+</ul>
+
+<ul>
+    <li>Red</li>
+    <li>Green</li>
+    <li>Blue</li>
+</ul>
+
+<ul>
+    <li>Sam</li>
+    <li>Fred</li>
+    <li>Smith</li>
+</ul>
+
+<ul>
+    <li>Dog</li>
+    <li>Cat</li>
+    <li>Fish</li>
+</ul>
+
+<ul>
+    <li>Red</li>
+    <li>Green</li>
+    <li>Blue</li>
+</ul>
+
+<ul>
+    <li>Sam</li>
+    <li>Fred</li>
+    <li>Smith</li>
+</ul>
+
+<script
+        src="https://code.jquery.com/jquery-2.2.4.min.js"
+        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+        crossorigin="anonymous"></script>
 </body>
 </html>
+
+<p>
+    I'm your cool new webpage. Made with <a href="https://glitch.com">Glitch</a>!
+</p>
+
+<!-- include the Glitch button to show what the webpage is about and
+      to make it easier for folks to view source and remix -->
+<div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
+<script src="https://button.glitch.me/button.js"></script>
+<script>
+    $ (function() {
+        "use strict";
+
+//===
+//====== 1. Refactor the h1 to have a background color of yellow. -->
+        $("h1").css("background","yellow");
+
+
+//=== Changing Text ===
+//====== 2. refactor the 4th paragraph to "hello study group" -->
+        $('p').eq(3).html('hello study group');
+        // $('section>p').next().next().next().html('hello study group'); -----> ??????????
+
+
+//===
+//====== 3. refactor the 5th "ul" of the 'li' list, highlight the 2nd item in that list to green. -->
+        $('ul').eq(4).children().first().next().css('background', 'green');
+
+
+//=== .hide() ===
+//====== 4. hide the title of the page -->
+        $('h1').hide();
+
+
+//===
+//====== 5.	Highlight the 4th paragraph -->
+        $('p').eq(-6).css('background', 'yellow');
+
+
+//=== Changing Text ===
+//====== 6.	Change text color of second item on each list to red
+        //========= Option 1
+        // $('ul').each(function() {
+        //   $(this).children().eq(1).css('color', 'red');
+        // })
+
+        //========= Option 2
+        $('ul').each(function() {
+            $(this).children().first().next()
+                .css('color', 'red');
+        });
+
+
+//=== .click() ===
+//====== 7.	Make each item on the list turn to bold when that item is clicked. -->
+        $('li').click(function() {
+            $(this).css('font-weight', 'bold');
+        });
+
+
+//=== .hover() ==
+//====== 8. When you hover the second paragraph the third paragraph should turn green-->
+        $('p').eq(1).hover(
+            function() {
+                $('p').css('color', 'green');
+            },function(){
+                $('p').eq(2).css('color', 'black');
+            });
+
+
+//===
+//====== 9. When you click on the second li in the third ul the first item in the ol should change to 'codeUp'-->
+
+        $('ul').eq(2).children().first().next();
+
+
+//===
+//====== 10. Change the title to 'Carolina Panthers are the best' in green-->
+        $('h1').show().html('Carolina Panthers are the best');
+
+
+//===
+//====== 11. When you click on the panthers, all paragraphs hide-->
+        $('h1').click(function(){ // also can use hover, etc.
+            $('p').toggle();
+        });
+
+
+//====== 12. Without using eq(), change the third paragraph font size and font color to blue.
+        $('section').first().next().next().next().children().first().css({color: "blue", "font-size": "20px"})
+
+        $('p').first().dblclick(function () {
+            console.log($('ul').first().children().length);
+
+        })
+
+            $('h1').click(function() {
+                var currentBorderWidth = $('h1').css('border-width');
+                var currentBorderValue = parseInt(currentBorderWidth.substring(0, currentBorderWidth.length - 2));
+                $('h1').css('border-width', 5 + currentBorderValue + "px");
+            })
+
+
+//      <section> -------- 1st Section ***** STARTING POINT *****
+//          <h1></h1>
+//      </<section>
+
+//      <section> -------- 2nd Section
+//          <p></p> ----------------------------- 1st Paragraph
+//      </<section>
+
+//      <section> -------- 3rd Section
+//          <p></p> ----------------------------- 2nd Paragraph
+//      </<section>
+
+//      <section> -------- 4th Section
+//          <p></> ----------------------- 3rd Paragraph (first child of this section) ***** TARGET *****
+//              <ul> --------------------- (2nd child of this section)
+//                  <li></li>
+//                  <li></li>
+//                  <li></li>
+//              </ul>
+//
+
+    });
+
+</script>
+</body>
+</html>
+
+
+
+
+
+
+
