--- a/google_maps_api.html
+++ b/google_maps_api.html
@@ -1,138 +1,139 @@
-<!--<!DOCTYPE html>-->
-<!--<html>-->
-<!--<head>-->
-    <!--<title>Google Map Project</title>-->
-    <!--<meta name="viewport" content="initial-scale=1.0">-->
-    <!--<meta charset="utf-8">-->
-    <!--<style>-->
-        <!--#map {-->
-            <!--height: 90%;-->
-        <!--}-->
-        <!--html, body {-->
-            <!--height: 90%;-->
-            <!--margin: 0;-->
-            <!--padding: 0;-->
-        <!--}-->
-    <!--</style>-->
-<!--</head>-->
-<!--<body>-->
-<!--<div id="floating-panel">-->
-    <!--<input id="address" type="textbox" value="Sydney, NSW">-->
-    <!--<input id="submit" type="button" value="Geocode">-->
-<!--</div>-->
-<!--<div id="map"></div>-->
-<!--<script>-->
-    <!--function initMap() {-->
-        <!--var map = new google.maps.Map(document.getElementById('map'), {-->
-            <!--zoom: 10,-->
-            <!--center: {lat: 29.406853, lng: -98.504083}-->
-        <!--});-->
-        <!--var geocoder = new google.maps.Geocoder();-->
-
-        <!--document.getElementById('submit').addEventListener('click', function() {-->
-            <!--geocodeAddress(geocoder, map);-->
-        <!--});-->
-    <!--}-->
-    <!--function geocodeAddress(geocoder, resultsMap) {-->
-        <!--var address = document.getElementById('address').value;-->
-        <!--geocoder.geocode({'address': address}, function(results, status) {-->
-            <!--if (status === 'OK') {-->
-                <!--resultsMap.setCenter(results[0].geometry.location);-->
-                <!--var marker = new google.maps.Marker({-->
-                    <!--map: resultsMap,-->
-                    <!--position: results[0].geometry.location-->
-                <!--});-->
-            <!--} else {-->
-                <!--alert('Geocode was not successful for the following reason: ' + status);-->
-            <!--}-->
-        <!--});-->
-    <!--}-->
-    <!--function initMap() {-->
-        <!--var myLatLng = {lat: 29.6098, lng: -98.4986};-->
-        <!--var map = new google.maps.Map(document.getElementById('map'), {-->
-            <!--zoom: 10,-->
-            <!--center: myLatLng-->
-        <!--});-->
-        <!--var marker = new google.maps.Marker({-->
-            <!--position: myLatLng,-->
-            <!--map: map,-->
-        <!--});-->
-        <!--var infowindow = new google.maps.InfoWindow({-->
-            <!--content: "You're not lost, You are here!"-->
-        <!--});-->
-        <!--infowindow.open(map, marker);-->
-        <!--marker.setMap(map);-->
-    <!--}-->
-<!--</script>-->
-<!--<script src="https://maps.googleapis.com/maps/api/js?key=[API KEY GOES HERE] &callback=initMap"-->
-        <!--async defer></script>-->
-<!--</body>-->
-<!--</html>-->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <!DOCTYPE html>
 <html>
 <head>
-    <style type="text/css">
-        #map-canvas {
-            width: 770px;
-            height: 481px;
+    <title>Google Map Project</title>
+    <meta name="viewport" content="initial-scale=1.0">
+    <meta charset="utf-8">
+    <style>
+        #map {
+            height: 90%;
+        }
+        html, body {
+            height: 90%;
+            margin: 0;
+            padding: 0;
         }
     </style>
 </head>
 <body>
-<!-- div to hold map -->
-<div id="map-canvas"></div>
+    <div id="floating-panel">
+        <input id="address" type="textbox" value="San Antonio, TX">
+        <input id="submit" type="button" value="Geocode">
+    </div>
+    <div id="map"></div>
+<script>
+    function initMap() {
+        var map = new google.maps.Map(document.getElementById('map'), {
+            zoom: 10,
+            center: {lat: 29.406853, lng: -98.504083}
+        });
+        var geocoder = new google.maps.Geocoder();
 
-<!-- Load the Google Maps API [DON'T FORGET TO USE A KEY] -->
-<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY_GOES_HERE"></script>
-
-<!-- Script to show address on map -->
-<script type="text/javascript">
-    (function() {
-        "use strict";
-
-        const marker = {
-            lat:  29.426791,
-            lng: -98.489602
-        }
-
-        // Set our map options
-        var mapOptions = {
-            // Set the zoom level
-            zoom: 19,
-
-            // This sets the center of the map at our location
-            center: marker,
-
-            // Add the marker to our existing map
-            var codeup = new google.maps.Marker({
-                position: marker,
-                map: map
-            })
+        document.getElementById('submit').addEventListener('click', function() {
+            geocodeAddress(geocoder, map);
+        });
+    }
+    function geocodeAddress(geocoder, resultsMap) {
+        var address = document.getElementById('address').value;
+        geocoder.geocode({'address': address}, function(results, status) {
+            if (status === 'OK') {
+                resultsMap.setCenter(results[0].geometry.location);
+                var marker = new google.maps.Marker({
+                    map: resultsMap,
+                    position: results[0].geometry.location
+                });
+            } else {
+                alert('Geocode was not successful for the following reason: ' + status);
+            }
+        });
+    }
+    function initMap() {
+        var myLatLng = {lat: 29.6098, lng: -98.4986};
+        var map = new google.maps.Map(document.getElementById('map'), {
+            zoom: 10,
+            center: myLatLng
+        });
+        var marker = new google.maps.Marker({
+            position: myLatLng,
+            map: map,
+        });
         var infowindow = new google.maps.InfoWindow({
-            content: "Changing the world, one programmer at a time."
-        })
-
-
-        };
-
-        // Render the map
-        var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
-    })();
+            content: "You're not lost, You are here!"
+        });
+        infowindow.open(map, marker);
+        marker.setMap(map);
+    }
 </script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD2TQ6CLAIJjiONhaOjQwpEabylN0SjbZk
+&callback=initMap"
+        async defer></script>
 </body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--<!DOCTYPE html>-->
+<!--<html>-->
+<!--<head>-->
+    <!--<style type="text/css">-->
+        <!--#map-canvas {-->
+            <!--width: 770px;-->
+            <!--height: 481px;-->
+        <!--}-->
+    <!--</style>-->
+<!--</head>-->
+<!--<body>-->
+<!--&lt;!&ndash; div to hold map &ndash;&gt;-->
+<!--<div id="map-canvas"></div>-->
+
+<!--&lt;!&ndash; Load the Google Maps API [DON'T FORGET TO USE A KEY] &ndash;&gt;-->
+<!--<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY_GOES_HERE"></script>-->
+
+<!--&lt;!&ndash; Script to show address on map &ndash;&gt;-->
+<!--<script type="text/javascript">-->
+    <!--(function() {-->
+        <!--"use strict";-->
+
+        <!--const marker = {-->
+            <!--lat:  29.426791,-->
+            <!--lng: -98.489602-->
+        <!--}-->
+
+        <!--// Set our map options-->
+        <!--var mapOptions = {-->
+            <!--// Set the zoom level-->
+            <!--zoom: 19,-->
+
+            <!--// This sets the center of the map at our location-->
+            <!--center: marker,-->
+
+            <!--// Add the marker to our existing map-->
+            <!--var codeup = new google.maps.Marker({-->
+                <!--position: marker,-->
+                <!--map: map-->
+            <!--})-->
+        <!--var infowindow = new google.maps.InfoWindow({-->
+            <!--content: "Changing the world, one programmer at a time."-->
+        <!--})-->
+
+
+        <!--};-->
+
+        <!--// Render the map-->
+        <!--var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);-->
+    <!--})();-->
+<!--</script>-->
+<!--</body>-->
